methods.slug.SlugHunting.scala.error
Erreur de compilation :
SlugHunting:39: error: type mismatch;
 found   : Unit
 required: Boolean
  if (estSurBiscuit==true) {
  ^